compiler/testData/checkerWithErrorTypes/quick/backingField/CyclicReferenceInitializer.jet
class Cyclic() {
    val a = <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM, UNINITIALIZED_VARIABLE!>$a<!>
}
